<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.simonkenny.audioplaybackexample.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_files_title"/>

        <Button
            android:id="@+id/audio_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audio_file_name_1"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <Button
            android:id="@+id/audio_button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audio_file_name_2"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <Button
            android:id="@+id/audio_button_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audio_file_name_3"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_files_licence"/>

    </LinearLayout>
</RelativeLayout>
